# Remote-Control-App

./: .gitignore  README.md
agent/: .gitignore  CMakeLists.txt  CMakeSettings.json.example  OpenCVPath.cmake.example  README.md  vscode-settings.example.json
agent/src/: app_manager.cpp  app_manager.h  commands.cpp  commands.h  file_ops.cpp  file_ops.h  keylogger.cpp  keylogger.h  main  main.cpp  mouse_control.cpp  mouse_control.h  ping.cpp  ping.h  process_manager.cpp  process_manager.h  screen_viewer.cpp  screen_viewer.h  screenshot.cpp  screenshot.h  system_power.cpp  system_power.h  utils.cpp  utils.h  webcam.cpp  webcam.h
client/: .prettierignore  README.md  index.html  package-lock.json  package.json
client/src/: App.tsx  global.d.ts  index.css  main.ts  preload.ts  renderer.tsx  types.ts
client/src/components/: AgentListModalShell.tsx  AppListModal.tsx  FeaturePanel.tsx  FileTransferModal.tsx  KeyloggerModal.tsx  MouseControlModal.tsx  PcList.tsx  ProcessListModal.tsx  ScreenViewerModal.tsx  ScreenshotModal.tsx  SessionConsole.tsx  WebcamModal.tsx
client/src/hooks/: useModalEscape.ts
client/src/utils/: formatKeylogDisplay.ts  formatKeyloggerLog.ts  parseListApps.ts  parseListProcesses.ts
docs/: README.md  architecture.md
